docs: :memo: Minor link fixes

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,8 +4,8 @@ contact_links:
     url: https://iles-docs.netlify.app/faqs/troubleshooting
     about: 'Please check the most common configuration problems before opening an issue.'
   - name: Discord Chat
-    url: https://discord.com/channels/804011606160703521/900707742203920394
-    about: 'Discuss with other users in the #iles channel of the Vite.js Discord server.'
+    url: https://discord.gg/p7rXjFcwXa
+    about: 'Discuss with other users in the #iles channel of the îles Discord server.'
   - name: Questions & Discussions
     url: https://github.com/ElMassimo/iles/discussions
     about: Use GitHub discussions for questions and discussions.
