chore: :rotating_light: Disable prettier in vs settings to avoid local VS code extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
+  "prettier.enable": false,
   "files.exclude": {
     "**/dist": true
   },
