--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "packageManager": "pnpm@9.8.0",
   "scripts": {
     "build:all": "pnpm nx run-many --target=build --all --exclude docs --exclude vue-blog",
+    "dev": "pnpm -r --parallel --filter './packages/**' run dev",
     "lint:all": "pnpm nx run-many --target=lint --all",
     "lint:fix:all": "pnpm nx run-many --target=lint:fix --all",
     "docs": "npm -C docs run dev",
@@ -20,17 +21,17 @@
     "test": "packages/iles/bin/iles.js test"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.24.0",
+    "@antfu/eslint-config": "^3.15.0",
     "@nrwl/cli": "^15.9.3",
     "@nrwl/nx-cloud": "^19.1.0",
     "@nx/workspace": "^19.7.3",
     "concurrently": "^8.2.2",
     "conventional-changelog-cli": "^5.0.0",
     "enquirer": "^2.4.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-solid": "^0.14.1",
-    "eslint-plugin-svelte": "^2.43.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-solid": "^0.14.5",
+    "eslint-plugin-svelte": "^2.46.1",
     "execa": "^9.3.0",
     "iles": "workspace:*",
     "minimist": "^1.2.8",
@@ -38,17 +39,19 @@
     "semver": "^7.6.3",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.4"
+    "vitest": "^3.0.3"
   },
   "pnpm": {
     "overrides": {
       "@typescript-eslint/typescript-estree": "8.5.0",
       "esbuild": "0.24.0",
-      "vite": "5.4.10"
+      "vite": "6.0.11"
     },
     "peerDependencyRules": {
       "allowedVersions": {
-        "eslint": "9"
+        "@typescript-eslint/typescript-estree": "8.5.0",
+        "esbuild": "0.24.0",
+        "vite": "6.0.11"
       }
     }
   }
