--- a/packages/hydration/package.json
+++ b/packages/hydration/package.json
@@ -41,10 +41,10 @@
     "preact": "^10.24.3",
     "preact-render-to-string": "^6.5.11",
     "solid-js": "^1.9.3",
-    "svelte": "^5.1.13",
+    "svelte": "^5.19.1",
     "tsup": "8.2.4",
     "typescript": "^5.6.3",
-    "vite": "^5.4.10",
+    "vite": "6.0.11",
     "vue": "^3.5.12"
   }
 }
