--- a/packages/iles/package.json
+++ b/packages/iles/package.json
@@ -84,13 +84,13 @@
     "picocolors": "^1.0.1",
     "unist-util-visit": "^5.0.0",
     "unplugin-vue-components": "^0.27.3",
-    "vite": "^5.4.10",
+    "vite": "6.0.11",
     "vue": "^3.5.12",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
     "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
     "@types/micromatch": "^4.0.9",
