--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -49,6 +49,6 @@
     "typescript": "^5.6.3",
     "unified": "^11.0.5",
     "vfile": "^6.0.2",
-    "vite": "^5.4.10"
+    "vite": "6.0.11"
   }
 }
