feat: :sparkles: Make app.ts and site.ts optional

--- a/packages/iles/tsconfig.json
+++ b/packages/iles/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "strict": true,
     "declaration": true,
