test: 🧪 Updated previous snapshot for related asset naming change from app-*.css to user-app-*.css

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build
         run: pnpm build:all
 
+      - name: Build Blog Site
+        run: pnpm blog:build
+
       - name: Tests
         run: pnpm test
 
