chore: :building_construction: Fixed types ordering in package.json and thereby types issues between repos

--- a/packages/excerpt/package.json
+++ b/packages/excerpt/package.json
@@ -12,9 +12,9 @@
     "dist",
     "src"
   ],
-  "types": "dist/excerpt.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/excerpt.d.ts",
       "import": "./dist/excerpt.js",
       "require": "./src/excerpt.cjs"
     },
