--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowJs": true,
     "jsx": "preserve",
     "jsxFactory": "h",
