--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -11,10 +11,10 @@
     "dist",
     "src"
   ],
-  "types": "dist/icons.d.cts",
   "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/icons.d.cts",
       "import": "./src/icons.mjs",
       "require": "./dist/icons.cjs"
     },
