feat: :sparkles: Support unplugin-auto-import with new `autoImport` key in iles config, docs updated

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -6,3 +6,19 @@ cypress/screenshots
 
 # Algolia
 .algolia.env
+
+# Pinegrow
+_pgbackup
+_pginfo
+
+## optional
+# pinegrow.json
+
+## optional
+## Uncomment the below as per your needs
+## add any d.ts files that are auto-generated, for eg,
+auto-imports.d.ts
+components.d.ts
+composables.d.ts
+## rollup visualizer
+stats.html
