--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -22,11 +22,12 @@
       "~/*": ["src/*"]
     }
   },
-  "exclude": [
-    "node_modules/cypress"
-  ],
   "include": [
+    "auto-imports.d.ts",
     "components.d.ts",
     "composables.d.ts"
+  ],
+  "exclude": [
+    "node_modules/cypress"
   ]
 }
