--- a/packages/iles/package.json
+++ b/packages/iles/package.json
@@ -84,6 +84,7 @@
     "pathe": "^1.1.2",
     "picocolors": "^1.0.1",
     "unist-util-visit": "^5.0.0",
+    "unplugin-auto-import": "^19.0.0",
     "unplugin-vue-components": "^0.27.3",
     "vite": "6.0.11",
     "vue": "^3.5.12",
