refactor: ♻️ docs updated to use auto-imports of APIs and composables within logic folder

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build
         run: pnpm build:all
 
+      - name: Build Docs Site
+        run: pnpm docs:build
+
       - name: Build Blog Site
         run: pnpm blog:build
 
