refactor: :recycle: the-vue-point updated to use auto-imports of APIs and composables within logic folder
Renamed NavBarLinks.svelte to vue file to avoid (for now) svelte's `lifecycle_function_unavailable`

--- a/playground/the-vue-point/.gitignore
+++ b/playground/the-vue-point/.gitignore
@@ -2,3 +2,19 @@ node_modules
 dist
 .vitepress/metadata.json
 .iles-ssg-temp
+
+# Pinegrow
+_pgbackup
+_pginfo
+
+## optional
+# pinegrow.json
+
+## optional
+## Uncomment the below as per your needs
+## add any d.ts files that are auto-generated, for eg,
+auto-imports.d.ts
+components.d.ts
+composables.d.ts
+## rollup visualizer
+stats.html
