--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docs:now": "npm -C docs run now",
     "docs:check": "npm -C docs run check",
     "blog": "npm run -C playground/the-vue-point dev",
+    "simple": "npm run -C playground/a-simple-iles-app dev",
     "blog:build": "npm run -C playground/the-vue-point build",
     "blog:now": "npm run -C playground/the-vue-point now",
     "blog:check": "npm -C playground/the-vue-point run check",
@@ -25,6 +26,7 @@
     "@nrwl/cli": "^15.9.3",
     "@nrwl/nx-cloud": "^19.1.0",
     "@nx/workspace": "^19.7.3",
+    "@pinegrow/iles-module": "^3.0.69",
     "concurrently": "^8.2.2",
     "conventional-changelog-cli": "^5.0.0",
     "enquirer": "^2.4.1",
