--- a/packages/iles/package.json
+++ b/packages/iles/package.json
@@ -57,9 +57,9 @@
   ],
   "author": "Máximo Mussini",
   "license": "MIT",
-  "homepage": "https://github.com/ElMassimo/iles",
+  "homepage": "https://github.com/nuraui/nurajs",
   "bugs": {
-    "url": "https://github.com/ElMassimo/iles/issues"
+    "url": "https://github.com/nuraui/nurajs/issues"
   },
   "dependencies": {
     "@antfu/install-pkg": "^0.3.3",
