--- a/packages/images/package.json
+++ b/packages/images/package.json
@@ -20,14 +20,14 @@
     },
     "./package.json": "./package.json"
   },
-  "funding": "https://github.com/sponsors/ElMassimo",
+  "funding": "https://github.com/sponsors/nuraui",
   "author": "Máximo Mussini <maximomussini@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ElMassimo/iles"
+    "url": "https://github.com/nuraui/nurajs"
   },
-  "homepage": "https://github.com/ElMassimo/iles",
-  "bugs": "https://github.com/ElMassimo/iles/issues",
+  "homepage": "https://github.com/nuraui/nurajs",
+  "bugs": "https://github.com/nuraui/nurajs/issues",
   "dependencies": {
     "pathe": "^1.1.2",
     "vite-plugin-image-presets": "^0.3.4"
